yaml/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-api
  labels:
    app: template
    type: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template
      type: api
  template:
    metadata:
      labels:
        app: template
        type: api
    spec:
      containers:
        - name: template-api
          image: template/api
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3001
